--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 html {
     color: #222;
     font-size: 1em;
-    line-height: 1.4;
+    line-height: 1.3;
 }
 
 /*
@@ -88,20 +88,278 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+*:focus {
+    outline: 0 !important;
+}
 
+html * {
+    font-family: Roboto;
+    color: #36404d;
+    letter-spacing: 0.01em;
+}
 
+body {
+    background-color: #f1f3f6;
+}
 
+header {
+    width: 100%;
+    text-align: center;
+}
 
+.logo {
+    margin: 4px 0;
+}
 
+#script {
+    width: 100%;
+    text-align: center;
+}
 
+#script .index {
+    width: 40%;
+}
 
+#script .submit {
+    width: 50%;
+    font-weight: bold;
+}
 
+#script .question {
+    margin: 6px auto 20px;
+    font-size: 21px;
+}
 
+#script .index-container {
+    background-color: #ffffff;
+    margin: 0 auto;
+    padding: 40px 15px;
+    display: inline-block;
+    border-radius: 4px;
+    box-shadow: 0 6px 6px -3px rgba(90, 90, 90, .1),
+    0 10px 14px 1px rgba(90, 90, 90, .14),
+    0 4px 18px 3px rgba(90, 90, 90, .12);
+}
 
+#script .index-container input {
+    width: 51px;
+    height: 60px;
+    font-size: 25px;
+    margin: 0 12px;
+    border-radius: 4px;
+}
 
+#range-btn-0 {
+    background-color: #e7342a;
+}
 
+#range-btn-1 {
+    background-color: #f46d47;
+}
 
+#range-btn-2 {
+    background-color: #f27c32;
+}
 
+#range-btn-3 {
+    background-color: #f18329;
+}
+
+#range-btn-4 {
+    background-color: #f08920;
+}
+
+#range-btn-5 {
+    background-color: #e59613;
+}
+
+#range-btn-6 {
+    background-color: #aea81d;
+}
+
+#range-btn-7 {
+    background-color: #a0ac20;
+}
+
+#range-btn-8 {
+    background-color: #7ab826;
+}
+
+#range-btn-9 {
+    background-color: #79b927;
+}
+
+.node-title {
+    padding: 20px 0;
+    font-weight: bold;
+    font-size: 20px;
+    text-align: left;
+}
+
+.dictionary-title {
+    text-align: left;
+    padding: 0 25px 10px;
+    font-size: 14px;
+}
+
+.toggle-container {
+    width: 100%;
+    text-align: left;
+    background-color: #f1f3f6;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.toggle-container .toggle-title {
+    padding: 15px 20px 10px;
+    font-size: 20px;
+}
+
+.toggle-container .toggle-title:hover {
+    cursor: pointer;
+    box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.2);
+}
+
+.toggle-container .toggle-body {
+    display: none;
+    padding: 10px;
+    border-top: 2px solid #e1e3e6;
+}
+
+.submit-sheet {
+    margin: 0 auto;
+    padding: 0 20px;
+    border-radius: 5px;
+    background-color: #ffffff;
+    box-shadow: 0 6px 6px -3px rgba(90, 90, 90, .1),
+    0 10px 14px 1px rgba(90, 90, 90, .14),
+    0 4px 18px 3px rgba(90, 90, 90, .12);
+    width: 55.5%;
+}
+
+#submit-btn {
+    margin: 40px 0;
+    background-color: #6db218;
+    width: 200px;
+    height: 50px;
+    font-size: 20px;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.btn {
+    color: #fff;
+    font-weight: bold;
+    border: none;
+    transition: all 0.3s ease;
+}
+
+.btn:hover {
+    cursor: pointer;
+    box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.2);
+}
+
+.btn:active {
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.checkbox-container {
+    position: relative;
+    margin-bottom: 9px;
+}
+
+.checkbox-container input[type="checkbox"] {
+    visibility: hidden;
+}
+
+.checkbox-container span{
+    position: absolute;
+    top: -1px;
+    left: 25px;
+}
+
+.checkbox-container label {
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    background: #79b927;
+    border: 1px solid #659a20;
+    border-radius: 5px;
+}
+
+.checkbox-container label:hover {
+    box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.2);
+}
+
+.checkbox-container label:after {
+    opacity: 0;
+    content: '';
+    position: absolute;
+    width: 8px;
+    height: 3px;
+    background: transparent;
+    top: 3px;
+    left: 2px;
+    border: 2px solid #ffffff;
+    border-top: none;
+    border-right: none;
+    transform: rotate(-45deg);
+}
+
+.checkbox-container input[type=checkbox]:checked + label:after {
+    opacity: 1;
+}
+
+.input-container {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    margin-left: 25px;
+    font-size: 14px;
+}
+
+.input-container label {
+    margin-bottom: 9px;
+}
+
+.input-container textarea {
+    min-height: 38px;
+    width: 50%;
+}
+.input-container textarea::placeholder {
+    color: #c4c7ca;
+}
+
+.t-area {
+    resize: none;
+    border-radius: 5px;
+    border: 1px solid #caccce;
+    padding: 10px 9px;
+}
+
+.textarea-container {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.textarea-container label {
+
+}
+
+.textarea-container textarea {
+    background-color: #fafbfc;
+    min-height: 58px;
+    font-size: 17px;
+}
+
+.textarea-container textarea::placeholder {
+    font-size: 17px;
+    color: #c4c7ca;
+}
 
 
 
@@ -216,8 +474,9 @@ textarea {
     *:before,
     *:after {
         background: transparent !important;
-        color: #000 !important; /* Black prints faster:
-                                   http://www.sanbeiji.com/archives/953 */
+        color: #000 !important;
+        /* Black prints faster:
+                                          http://www.sanbeiji.com/archives/953 */
         box-shadow: none !important;
         text-shadow: none !important;
     }
@@ -239,7 +498,6 @@ textarea {
      * Don't show links that are fragment identifiers,
      * or use the `javascript:` pseudo protocol
      */
-
     a[href^="#"]:after,
     a[href^="javascript:"]:after {
         content: "";
@@ -248,6 +506,7 @@ textarea {
     pre {
         white-space: pre-wrap !important;
     }
+
     pre,
     blockquote {
         border: 1px solid #999;
@@ -258,7 +517,6 @@ textarea {
      * Printing Tables:
      * http://css-discuss.incutio.com/wiki/Printing_Tables
      */
-
     thead {
         display: table-header-group;
     }
