--- a/css/main.css
+++ b/css/main.css
@@ -93,22 +93,38 @@ textarea {
 }
 
 html * {
-    font-family: Roboto;
+    font-family: "Open Sans";
     color: #36404d;
-    letter-spacing: 0.01em;
 }
 
 body {
+    margin: 0;
     background-color: #f1f3f6;
+    text-align: center;
 }
 
 header {
     width: 100%;
-    text-align: center;
+    background-color: #ffffff;
 }
 
-.logo {
-    margin: 4px 0;
+header .container {
+    width: 57%;
+    height: 80px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header .container .info {
+    text-align: right;
+    line-height: 1.5em;
+}
+
+header .container .info span {
+    font-weight: bold;
 }
 
 #script {
@@ -118,6 +134,7 @@ header {
 
 #script .index {
     width: 40%;
+    /*width: 45%;*/
 }
 
 #script .submit {
@@ -126,14 +143,15 @@ header {
 }
 
 #script .question {
-    margin: 6px auto 20px;
-    font-size: 21px;
+    margin: 21px auto 20px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 #script .index-container {
     background-color: #ffffff;
     margin: 0 auto;
-    padding: 40px 15px;
+    padding: 40px 10px;
     display: inline-block;
     border-radius: 4px;
     box-shadow: 0 6px 6px -3px rgba(90, 90, 90, .1),
@@ -145,47 +163,51 @@ header {
     width: 51px;
     height: 60px;
     font-size: 25px;
-    margin: 0 12px;
+    margin: 0 9px;
     border-radius: 4px;
 }
 
 #range-btn-0 {
-    background-color: #e7342a;
+    background-color: #e12117;
 }
 
 #range-btn-1 {
-    background-color: #f46d47;
+    background-color: #e7342a;
 }
 
 #range-btn-2 {
-    background-color: #f27c32;
+    background-color: #f46d47;
 }
 
 #range-btn-3 {
-    background-color: #f18329;
+    background-color: #f27c32;
 }
 
 #range-btn-4 {
-    background-color: #f08920;
+    background-color: #f18329;
 }
 
 #range-btn-5 {
-    background-color: #e59613;
+    background-color: #f08920;
 }
 
 #range-btn-6 {
-    background-color: #aea81d;
+    background-color: #e59613;
 }
 
 #range-btn-7 {
-    background-color: #a0ac20;
+    background-color: #aea81d;
 }
 
 #range-btn-8 {
-    background-color: #7ab826;
+    background-color: #a0ac20;
 }
 
 #range-btn-9 {
+    background-color: #7ab826;
+}
+
+#range-btn-10 {
     background-color: #79b927;
 }
 
@@ -211,7 +233,7 @@ header {
 }
 
 .toggle-container .toggle-title {
-    padding: 15px 20px 10px;
+    padding: 14px 35px 10px;
     font-size: 20px;
 }
 
@@ -226,15 +248,22 @@ header {
     border-top: 2px solid #e1e3e6;
 }
 
+.toggle-container .checkbox-container .toggle-checkbox {
+    top: 19px;
+    left: 10px;
+    position: absolute;
+    z-index: 0;
+}
+
 .submit-sheet {
-    margin: 0 auto;
+    margin: 0 auto 30px;
     padding: 0 20px;
     border-radius: 5px;
     background-color: #ffffff;
     box-shadow: 0 6px 6px -3px rgba(90, 90, 90, .1),
     0 10px 14px 1px rgba(90, 90, 90, .14),
     0 4px 18px 3px rgba(90, 90, 90, .12);
-    width: 55.5%;
+    width: 54%;
 }
 
 #submit-btn {
@@ -265,17 +294,32 @@ header {
 
 .checkbox-container {
     position: relative;
-    margin-bottom: 9px;
+}
+.checkbox-container.bottom {
+    margin-bottom: 7px;
+}
+.checkbox-container.bottom label {
+    margin-top: 8px;
 }
 
 .checkbox-container input[type="checkbox"] {
     visibility: hidden;
 }
 
-.checkbox-container span{
-    position: absolute;
-    top: -1px;
-    left: 25px;
+.checkbox-container input[type="text"] {
+    min-width: 42%;
+    margin-left: 20px;
+    font-size: 12px;
+    padding: 8px 10px;
+    border-radius: 3px;
+    border: 1px solid #caccce;
+}
+
+.checkbox-container span {
+    /*position: absolute;*/
+    /*top: -1px;*/
+    /*left: 25px;*/
+    margin-left: 6px;
 }
 
 .checkbox-container label {
